--- a/rust_test/templates/home.html
+++ b/rust_test/templates/home.html
@@ -1,10 +1,10 @@
-{% extends "layout.html" %}
+{% extends "home.html" %}
 
 {% block title %}Finleys Foods{% endblock %}
 
 {% block content %}
 <h1>Hello, {{ name }}!</h1>
 <p>
-	<a href = "/recipies">Lets get coooking</a>
+	<a href = "/recipes">Lets get coooking</a>
 </p>
 {% endblock %}
