--- a/rust_test/templates/recipes/form.html
+++ b/rust_test/templates/recipes/form.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Add Recipie{% endblock %}
+{% block title %}Add Recipe{% endblock %}
 
 {% block content %}
 <form action="{{ action }}" method="post">
