--- a/rust_test/templates/recipes/index.html
+++ b/rust_test/templates/recipes/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Recipies{% endblock %}
+{% block title %}Recipes{% endblock %}
 
 {% block content %}
 
